<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_title">
        <EditTextPreference
            android:key="@string/schoolName_key"
            android:icon="@drawable/icon_school"
            android:summary="@string/schoolName_sum"
            android:title="@string/schoolName_title" />
        <EditTextPreference
            android:key="@string/schoolCode_key"
            android:icon="@drawable/icon_code"
            android:summary="@string/schoolCode_sum"
            android:title="@string/schoolCode_title" />
        <EditTextPreference
            android:key="@string/realName_key"
            android:icon="@drawable/icon_me"
            android:summary="@string/realName_sum"
            android:title="@string/realName_title" />
        <EditTextPreference
            android:key="@string/birth_key"
            android:icon="@drawable/icon_calendar"
            android:summary="@string/birth_sum"
            android:title="@string/birth_title" />
        <EditTextPreference
            android:key="@string/edu_key"
            android:icon="@drawable/icon_edu"
            android:summary="@string/edu_sum"
            android:title="@string/edu_title" />
        <CheckBoxPreference
            android:key="@string/alert_key"
            android:summary="@string/alert_sum"
            android:title="@string/alert_title"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="@string/blink_key"
            android:summary="@string/blink_sum"
            android:title="@string/blink_title"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>